# CDS_SUDOTEAM

./: .gitattributes  CMakeLists.txt
darknet_wrapper/darknet/: .Makefile.swo  .Makefile.swp  Makefile  yolo-obj.cfg
darknet_wrapper/darknet/src/: wrapper_c.c  wrapper_c.h
darknet_wrapper/darknet_wrapper/: wrapper_cpp.cpp
darknet_wrapper/test/: traffic_sign_board_v2.weights
include/: carcontrol.h  detectlane.h  detectlane_old.h
launch/: my_launch.launch
src/: .main.cpp.swp  carcontrol.cpp  darknet.cpp  detectlane.cpp  detectlane_old.cpp  main.cpp  my_control_car.cpp
